// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chatJobsMaker(options)(channel, segments) add attached file data and info if there are 1`] = `
Array [
  Object {
    "attachmentAssetTag": undefined,
    "attachmentFileData": "_DEADLY_VIRUS_",
    "attachmentFileInfo": undefined,
    "channelUid": "messenger._PAGE_ID_.psid.john",
    "request": Object {
      "body": Object {
        "a": "gift",
        "recipient": Object {
          "id": "john",
        },
      },
      "method": "POST",
      "relative_url": "me/messages",
    },
  },
  Object {
    "attachmentAssetTag": undefined,
    "attachmentFileData": "_MERCY_CURE_",
    "attachmentFileInfo": Object {
      "contentType": "image/jpeg",
      "filename": "deathangel.jpg",
      "knownLength": 66666,
    },
    "channelUid": "messenger._PAGE_ID_.psid.john",
    "request": Object {
      "body": Object {
        "a": "redemption",
        "recipient": Object {
          "id": "john",
        },
      },
      "method": "POST",
      "relative_url": "bar/baz",
    },
  },
]
`;

exports[`chatJobsMaker(options)(channel, segments) add coresponding options to body on messages 1`] = `
Array [
  Object {
    "attachmentAssetTag": undefined,
    "attachmentFileData": undefined,
    "attachmentFileInfo": undefined,
    "channelUid": "messenger._PAGE_ID_.psid.john",
    "request": Object {
      "body": Object {
        "persona_id": "your-dearest-friend",
        "recipient": Object {
          "id": "john",
        },
        "sender_action": "typing_on",
      },
      "method": "POST",
      "relative_url": "me/messages",
    },
  },
  Object {
    "attachmentAssetTag": undefined,
    "attachmentFileData": undefined,
    "attachmentFileInfo": undefined,
    "channelUid": "messenger._PAGE_ID_.psid.john",
    "request": Object {
      "body": Object {
        "message": Object {
          "id": 1,
        },
        "messaging_type": "MESSAGE_TAG",
        "notification_type": "SILENT_PUSH",
        "persona_id": "your-dearest-friend",
        "recipient": Object {
          "id": "john",
        },
        "tag": "PAYMENT_UPDATE",
      },
      "method": "POST",
      "relative_url": "me/messages",
    },
  },
  Object {
    "attachmentAssetTag": undefined,
    "attachmentFileData": undefined,
    "attachmentFileInfo": undefined,
    "channelUid": "messenger._PAGE_ID_.psid.john",
    "request": Object {
      "body": Object {
        "id": 2,
        "recipient": Object {
          "id": "john",
        },
      },
      "method": "POST",
      "relative_url": "bar/baz",
    },
  },
  Object {
    "attachmentAssetTag": undefined,
    "attachmentFileData": undefined,
    "attachmentFileInfo": undefined,
    "channelUid": "messenger._PAGE_ID_.psid.john",
    "request": Object {
      "body": Object {
        "message": Object {
          "text": "id:3",
        },
        "messaging_type": "MESSAGE_TAG",
        "notification_type": "SILENT_PUSH",
        "persona_id": "your-dearest-friend",
        "recipient": Object {
          "id": "john",
        },
        "tag": "PAYMENT_UPDATE",
      },
      "method": "POST",
      "relative_url": "me/messages",
    },
  },
  Object {
    "attachmentAssetTag": undefined,
    "attachmentFileData": undefined,
    "attachmentFileInfo": undefined,
    "channelUid": "messenger._PAGE_ID_.psid.john",
    "request": Object {
      "body": Object {
        "message": Object {
          "text": "4",
        },
        "messaging_type": "MESSAGE_TAG",
        "notification_type": "SILENT_PUSH",
        "persona_id": "your-dearest-friend",
        "recipient": Object {
          "id": "john",
        },
        "tag": "PAYMENT_UPDATE",
      },
      "method": "POST",
      "relative_url": "me/messages",
    },
  },
]
`;

exports[`chatJobsMaker(options)(channel, segments) respect options originally set in job value 1`] = `
Array [
  Object {
    "attachmentAssetTag": undefined,
    "attachmentFileData": undefined,
    "attachmentFileInfo": undefined,
    "channelUid": "messenger._PAGE_ID_.psid.Luke",
    "request": Object {
      "body": Object {
        "message": Object {
          "text": "bibiboo",
        },
        "messaging_type": "MESSAGE_TAG",
        "notification_type": "SILENT_PUSH",
        "persona_id": "astromech-droid",
        "recipient": Object {
          "id": "Luke",
        },
        "tag": "SHIPPING_UPDATE",
      },
      "method": "POST",
      "relative_url": "me/messages",
    },
  },
  Object {
    "attachmentAssetTag": undefined,
    "attachmentFileData": undefined,
    "attachmentFileInfo": undefined,
    "channelUid": "messenger._PAGE_ID_.psid.Luke",
    "request": Object {
      "body": Object {
        "message": Object {
          "text": "Oh! I apologize.",
        },
        "messaging_type": "UPDATE",
        "notification_type": "REGULAR",
        "persona_id": "protocol-droid",
        "recipient": Object {
          "id": "Luke",
        },
        "tag": undefined,
      },
      "method": "POST",
      "relative_url": "me/messages",
    },
  },
]
`;

exports[`chatJobsMaker(options)(channel, segments) respect the empty tag if messaging_type has already been set 1`] = `
Array [
  Object {
    "attachmentAssetTag": undefined,
    "attachmentFileData": undefined,
    "attachmentFileInfo": undefined,
    "channelUid": "messenger._PAGE_ID_.psid.Luke",
    "request": Object {
      "body": Object {
        "message": Object {
          "text": "bibibooboobibooboo",
        },
        "messaging_type": "RESPONSE",
        "notification_type": "SILENT_PUSH",
        "persona_id": "astromech-droid",
        "recipient": Object {
          "id": "Luke",
        },
      },
      "method": "POST",
      "relative_url": "me/messages",
    },
  },
]
`;
